--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 a {
-	font-size: 16px
+	font-size: 16px;
 	color: aquamarine;
 	text-decoration: underline;
 	text-align: center;
@@ -21,6 +21,10 @@ a {
 h2	{
 	color: gray;
 	font-size: 21px;
+}
+
+#personal-travel-guide h2 {
+	text-align: center;
 }
 
 footer	{
