--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,6 +18,10 @@ a {
 	text-align: center;
 }
 
+p {
+	text-align: center;
+}
+
 h2	{
 	color: gray;
 	font-size: 21px;
@@ -29,4 +33,14 @@ h2	{
 
 footer	{
 	text-align: end;
+}
+
+video {
+	display: block;
+	margin: auto;
+}
+
+img {
+	display:block;
+	margin: auto;
 }
