all changes complete

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,12 +3,15 @@
 html {
   font-family: "Verdana", sans-serif;
   background-color: black;
+  padding-bottom: 20px;
+  padding-top: 20px;
 }
 
 h1 {
 	color: white;
 	font-size:50px;
 	text-align: center;
+	padding-bottom: 30px;
 }
 
 a {
@@ -20,11 +23,13 @@ a {
 
 p {
 	text-align: center;
+	padding-bottom: 30px;
 }
 
 h2	{
 	color: gray;
 	font-size: 21px;
+	padding-bottom: 30px;
 }
 
 #personal-travel-guide h2 {
@@ -32,7 +37,8 @@ h2	{
 }
 
 footer	{
-	text-align: end;
+	display: flex;
+	justify-content: flex-end;
 }
 
 video {
@@ -43,4 +49,9 @@ video {
 img {
 	display:block;
 	margin: auto;
+	padding:30px 30px;
+}
+
+i {
+	z-index: 3;
 }
